Adding uni bonn link.

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 	    				<div class="col-md-10 col-sd-10 text_tech">
 			    			<p>
 			    			<h6>
-			    			<bold>University of Bonn, </bold>
-			    			<span style="font-size: 15px">Master of Computer Science, GPA: 1.2</span>
+			    			<bold><a href='https://www.uni-bonn.de/the-university?set_language=en' style="color: black">University of Bonn</a></bold>
+			    			<span style="font-size: 15px">, Master of Computer Science, GPA: 1.2</span>
 			    			</h6>
 			    			</p>
 		    			</div>
