Adding visa status.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 	        <ul class="navbar-nav mr-auto">
 	          
-	          <li class="nav-item dropdown">
+	          <li class="nav-item dropdown ">
 	            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">GitHub</a>
 	            <div class="dropdown-menu" aria-labelledby="dropdown01">
 	              <a class="dropdown-item" href="https://ankushkhanna.github.io/akka-fun/">Akka featues</a>
@@ -39,6 +39,9 @@
 	          </li>
 	          <li class="nav-item active">
 	          	<a class="nav-link" href="#contactMe">Contact me</a>
+	          </li>
+	          <li class="nav-item active">
+	          	<a class="nav-link" href="#visaStatus">Visa Status</a>
 	          </li>
 	        </ul>
 	      </div>
@@ -66,7 +69,7 @@
 				    			Determined and interested towards big data and machine learning problems. 
 				    			</p>
 				    			<p>
-				    				I am from India, New Delhi, 29 years old and have been living in Berlin for almost 4 years. I am huge fan of Berlin craft beer culture. 
+				    				I am from New Delhi, India. 29 years old and have been living in Berlin for almost 4 years. I am huge fan of Berlin craft beer culture. 
 				    			</p>
 
 			    			
@@ -290,6 +293,20 @@
 	    				<div class='col-md-12 col-sd-12 text_tech'>
 	    				<p>
 	    					Email: ankushkhanna22@gmail.com
+	    				</p>
+	 					</div>
+	    			</div>
+	    		</div>
+	    	</div>
+	    	<br/><br/>
+
+	    	<div class='visa_status' id='visaStatus'>
+	    		<h5>Visa Status</h5>
+	    		<div class='inner_padding'>
+	    			<div class="row" style="background-color: white">
+	    				<div class='col-md-12 col-sd-12 text_tech'>
+	    				<p>
+	    					<bold>Blue Card holder</bold>
 	    				</p>
 	 					</div>
 	    			</div>
