Adding germany to blue card holder.

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 	    			<div class="row" style="background-color: white">
 	    				<div class='col-md-12 col-sd-12 text_tech'>
 	    				<p>
-	    					<bold>Blue Card holder</bold>
+	    					<bold>Blue Card holder, Germany</bold>
 	    				</p>
 	 					</div>
 	    			</div>
