--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</style>
 	</head>
 	<body style="background-color: #f9f9f9">
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 		   <a class="navbar-brand" href="#">Ankush Khanna</a>
 		   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -48,6 +48,9 @@
 	      
 	    </nav>
 	    <br/>
+	    <br/>
+	    <br/>
+
 	    <div class="container"> 
 	    	<div class="about_me">
 	    	
