--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <style type="text/css">
@@ -17,6 +18,7 @@
         .text_tech {
             border-width: 10px;
             padding-top: 10px;
+            font-family: Arial;
         }
     </style>
 </head>
@@ -339,6 +341,17 @@
 
     </div>
     <br/><br/>
+
+    <div class='external_links'>
+        <div class='github'>
+            <h5>Github</h5>
+            <div class="inner_padding">
+                <div w3-include-html="git_hub.html"></div>
+            </div>
+        </div>
+
+    </div>
+    <br/><br/>
     <div class='contact_me' id='contactMe'>
         <h5>Contact me</h5>
         <div class='inner_padding'>
@@ -377,5 +390,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
         crossorigin="anonymous"></script>
+
+<script>
+    w3.includeHTML();
+</script>
+
 </body>
 </html>
