--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="col-md-10 col-sd-10 text_tech">
                     <p>
                     <h6>
-                        <bold>rebuy Recommence (Germany)</bold>
+                        <bold>reBuy Recommence (Germany)</bold>
                     </h6>
                     <bold>Backend Software Engineer</bold>
                     <ul>
