Seperating pages and adding interships.

--- a/index.html
+++ b/index.html
@@ -94,54 +94,10 @@
     </div>
     <div class="technical_skills">
         <h5>Technical Skill</h5>
-
         <div class="inner_padding">
-            <div class="row border" style="background-color: white">
-                <div class="col-md-4 text_tech" style="border-right: 1px;	">
-                    <p>
-                    <h6>
-                        <bold>Software Engineer:</bold>
-                    </h6>
-                    <span style="font-size: 15px">Java, Scala, Python (intermediate)</span>
-                    </p>
-                </div>
-                <div class="col-md-4 text_tech">
-                    <p>
-                    <h6>
-                        <bold>Software Development Frameworks:</bold>
-                    </h6>
-                    <span style="font-size: 15px">Spring, Spring boot, Play, SolrCloud</span>
-                    </p>
-                </div>
-                <div class="col-md-4 text_tech">
-                    <p>
-                    <h6>
-                        <bold>Streaming Frameworks:</bold>
-                    </h6>
-                    <span style="font-size: 15px">Kafka Streaming, Akka actor system, Akka graphs</span>
-                    </p>
-                </div>
-
-                <div class="col-md-4 text_tech">
-                    <p>
-                    <h6>
-                        <bold>ML/Big Data Framework:</bold>
-                    </h6>
-                    <span style="font-size: 15px">Sklean, Pandas, Spark, Cassandra</span>
-                    </p>
-                </div>
-
-                <div class="col-md-4 text_tech">
-                    <p>
-                    <h6>
-                        <bold>Testing:</bold>
-                    </h6>
-                    <span style="font-size: 15px">Junit, Mockito, Scalatest</span>
-                    </p>
-                </div>
-
-            </div>
+            <div w3-include-html="pages/technical_skills.html"></div>
         </div>
+
     </div>
     <br/>
     <br/>
@@ -171,75 +127,8 @@
     <br/><br/>
     <div class='work_experience'>
         <h5>Work Experience</h5>
-        <div class="work_experience_inner inner_padding">
-            <div class="row border" style="background-color: white">
-                <div class="col-md-2 col-sd-2 text_tech">
-                    <p>
-                    <h6>
-                        <bold>2017-today</bold>
-                    </h6>
-                    </p>
-                </div>
-              
-                <div class="col-md-10 col-sd-10 text_tech">
-                    <p>
-                    <h6>
-                        <bold>reBuy Recommence (Germany)</bold>
-                    </h6>
-                    <bold>Backend Software Engineer</bold>
-                    <ul>
-                        <li>Involved in architecture design for Search and Product information management teams</li>
-                        <li>ETL product data, 5.4 million product in different language, continuously from external
-                            service
-                        </li>
-                        <li>Improvement and optimization of Search SOLR</li>
-                        <li>Building concepts for improving search using data tracking</li>
-                        <li>Working on micro-service architecture</li>
-                        <li>Using Scala as a prominent language</li>
-                    </ul>
-                    </p>
-                </div>
-                <div class="col-md-2 col-sd-2 text_tech">
-                    <p>
-                    <h6>
-                        <bold>2014-2015</bold>
-                    </h6>
-                    </p>
-                </div>
-                <div class="col-md-10 col-sd-10 text_tech">
-                    <p>
-                    <h6>
-                        <bold>Visual Meta GmbH (Germany)</bold>
-                    </h6>
-                    <bold>Software Engineer</bold>
-                    <ul>
-                        <li>Recommender System initial design</li>
-                        <li>Using Java EE and Spring</li>
-                    </ul>
-                    </p>
-                </div>
-
-                <div class="col-md-2 col-sd-2 text_tech">
-                    <p>
-                    <h6>
-                        <bold>2010-2012</bold>
-                    </h6>
-                    </p>
-                </div>
-                <div class="col-md-10 col-sd-10 text_tech">
-                    <p>
-                    <h6>
-                        <bold>Newgen Software Technologies Limited (India)</bold>
-                    </h6>
-                    <bold>Java Software Engineer</bold>
-                    <ul>
-                        <li>Working on architecture design</li>
-                        <li>Development and maintenance of products</li>
-                    </ul>
-                    </p>
-                </div>
-            </div>
-
+        <div class="inner_padding">
+            <div w3-include-html="pages/work_experience.html"></div>
         </div>
     </div>
     <br/><br/>
@@ -248,12 +137,20 @@
         <div class='github'>
             <h5>Top GitHub</h5>
             <div class="inner_padding">
-                <div w3-include-html="git_hub.html"></div>
+                <div w3-include-html="pages/git_hub.html"></div>
             </div>
         </div>
 
     </div>
     <br/><br/>
+    <div class='internships'>
+        <h5>Internships</h5>
+        <div class="inner_padding">
+            <div w3-include-html="pages/internships.html"></div>
+        </div>
+    </div>
+    <br/>
+    <br/>
     <div class='contact_me' id='contactMe'>
         <h5>Contact me</h5>
         <div class='inner_padding'>
