--- a/pages/git_hub.html
+++ b/pages/git_hub.html
@@ -5,10 +5,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <style>
-        .card_height {
-            /*height: 10rem;*/
-        }
-
         .extra_padding {
             padding-bottom: 6px;
         }
@@ -19,7 +15,35 @@
     <div class="col-md-4 col-sd-4 text_tech">
         <div class="card card_height" style="width: 20rem;">
             <div class="card-header">
-                Akka Features
+                <b>Webfleet Kafka Connector</b>
+            </div>
+            <div class="card-block">
+                <p class="card-text">
+                <ul>
+                    <li>
+                        Kafka connector for Webfleet (Source)
+                    </li>
+                    <li>
+                       Converts messages to Avro
+                    </li>
+                    <li>
+                        Using JMX for metrics.
+                    </li>
+                </ul>
+                </p>
+                <div class="card-block">
+                    <p class="card-text">
+                        <a href="https://github.com/flix-tech/webfleet-kafka-connector" class="btn btn-primary" style="width: 100%;">GitHub</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4 col-sd-4 text_tech">
+        <div class="card card_height" style="width: 20rem;">
+            <div class="card-header">
+                <b>Akka Features</b>
             </div>
             <div class="card-block">
                 <p class="card-text">
@@ -46,7 +70,7 @@
     <div class="col-md-4 col-sd-4 text_tech">
         <div class="card card_height" style="width: 20rem;">
             <div class="card-header">
-                Spark Wrapper
+                <b>Spark Wrapper</b>
             </div>
             <div class="card-block">
                 <p class="card-text">
@@ -81,13 +105,12 @@
     <div class="col-md-4 col-sd-4 text_tech">
         <div class="card card_height" style="width: 20rem;">
             <div class="card-header">
-                Spring Example
+                <b>Spring Example</b>
             </div>
             <div class="card-block">
                 <p class="card-text">
                 <ul>
                     <li>Spring Boot</li>
-                    <li>Spring Controller</li>
                     <li>Spring Autowiring</li>
                 </ul>
 
@@ -104,7 +127,7 @@
     <div class="col-md-4 col-sd-4 text_tech">
         <div class="card card_height" style="width: 20rem;">
             <div class="card-header">
-                Mahout Recommendation
+                <b>Mahout Recommendation</b>
             </div>
             <div class="card-block">
                 <p class="card-text">
