Minor spelling fix.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<h4>Senior Data Engineer</h4>
 									<p>Working with real time 
 									data ingestion using Kafka. <br/>Some times I also write Spark batch and streaming jobs. <br/>
-									Preferably using Scala, Java</br>
+									Prefer using Scala, Java</br>
 									For data analysis I use Python pandas.
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 14th June 1988</a></li>
@@ -93,7 +93,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>Working in the domain of Data Engineer, I love challanges involving vast amount of data. 
+        					<p>Working in the domain of Data Engineer, I love challenges involving vast amount of data. 
         					I am also interested in Machine Learning Engineering envolving training and deploying ML models on scale.</p>
         					<div class="row">
         						<div class="col-md-4">
