--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<h3>Ankush Khanna</h3>
 									<h4>Senior Data Engineer</h4>
 									<p>Working with real time 
-									data ingestion using Kafka. <br/>Some times I also write Spark batch and streaming jobs. <br/>
+									data ingestion using Kafka. <br/>Sometimes I also write Spark batch and streaming jobs. <br/>
 									Prefer using Scala, Java</br>
 									For data analysis I use Python pandas.
 									<ul class="list basic_info">
@@ -94,7 +94,7 @@
         				<div class="welcome_text">
         					<h4>About Myself</h4>
         					<p>Working in the domain of Data Engineer, I love challenges involving vast amount of data. 
-        					I am also interested in Machine Learning Engineering envolving training and deploying ML models on scale.</p>
+        					I am also interested in Machine Learning Engineering involving  training and deploying ML models on scale.</p>
         					<div class="row">
         						<div class="col-md-4">
         							<div class="wel_item">
