--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-item active"><a class="nav-link" href="#skills">Skills</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="#timeline">Timeline</a></li>
                                 <li class="nav-item active"><a class="nav-link" href="#highlights">Highlights</a></li>
                                 <li class="nav-item active"><a class="nav-link" href="#work_exp">Work Experience</a></li>
 							</ul>
@@ -219,7 +220,7 @@
         <!--================End Welcome Area =================-->
         
         <!--================My Tabs Area =================-->
-        <section class="mytabs_area p_120">
+        <section class="mytabs_area p_120" id ="timeline">
         	<div class="container">
         		<div class="tabs_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
