Adding percentage to education.

--- a/index.html
+++ b/index.html
@@ -579,7 +579,8 @@
                                         </div>
                                         <div class="media-body">
                                             <h4>Uni of Bonn</h4>
-                                            <p>Master in Computer Sc.<br />Bonn, Germany</p>
+                                            <p>Master in Computer Sc.<br />Bonn, Germany</br>
+                                            GPA:1.21</p>
                                         </div>
                                     </div>
                                 </li>
@@ -591,7 +592,8 @@
                                         </div>
                                         <div class="media-body">
                                             <h4>MDU</h4>
-                                            <p>Bachelor in Computer Sc. <br />India</p>
+                                            <p>Bachelor in Computer Sc. <br />India</br>
+                                            74%</p>
                                         </div>
                                     </div>
                                 </li>
