--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         <!-- main css -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153546638-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-153546638-1');
+        </script>
+
     </head>
     <body>
         
@@ -424,6 +434,7 @@
                             <p><h3 class="mb-20 title_color">Senior Data Engineer</h3>
                                 <div class="">
                                        <li><b style="color:black">Leading data engineering guild</b></li>
+                                       <li></li>
                                         <li>Working with mapping team to provide accurate map layers: Speed, Turn time, HD Maps</li>
                                         <li>Building data pipelines using Kafka Stream</li>
                                         <li>Working along Data scientists with data preperation using Spark
